--- a/assignment_3_template/style.css
+++ b/assignment_3_template/style.css
@@ -1,10 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght,SOFT,WONK@9..144,100..900,0..100,0..1&display=swap");
-
-@font-face {
+/* @font-face {
   font-family: "Amstelvar";
-  src: url("../fonts/amstelvar-roman.woff2");
+  src: url("../fonts/amstelvar-roman.woff2") format(woff2) tech(variations);
+  font-variation-settings: "wght" 900, "GRAD" 88 !important;
+} */
+@import url("https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..800,0..1,0..1,0..1&display=swap");
+html {
+  font-size: 2.5rem;
+  line-height: 1.618;
+  font-family: "Amstelvar";
 }
-
 /* Prevent padding and border from affecting element width. */
 *,
 ::before,
@@ -17,16 +21,152 @@ body {
   margin: 0;
   padding: 0;
   line-height: inherit;
-  font-family: "Fraunces", serif;
-  background-color: darkgreen;
-  color: lightgreen;
   transition: all 100ms ease;
-  font-family: "Amstelvar";
-}
-#text-input {
-  font-family: "Amstelvar";
+  /* flex box properties */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+  overflow: hidden;
 }
 
-input[type="text" i] {
-  font-family:'Courier New', Courier, monospace
+#text-input {
+  max-width: 400px;
+  font-size: 2rem;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  height: 50%;
+  font-family: "Recursive", monospace;
+
+  /* font-variation-settings: "wght" 900, "GRAD" 88 !important; */
+}
+#text-input:focus-visible {
+  outline: none;
+  max-width: 400px;
+}
+
+img {
+  max-height: 50%;
+}
+
+/* friends animation */
+.friends {
+  animation: wavy 1s linear infinite;
+}
+
+@keyframes wavy {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px) rotate(-5deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+/* "i think i like you" animation */
+.i-think-i-like-you {
+  max-width: 45%;
+  animation: heart-pounding 1.5s ease-in-out infinite;
+}
+@keyframes heart-pounding {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.2);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+/* "let's fuck" animation */
+.lets-fuck {
+  animation: tilt 3s ease-in-out infinite;
+}
+@keyframes tilt {
+  0% {
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 1;
+  }
+  50% {
+    font-variation-settings: "wght" 900, "slnt" -15, "CASL" 1, "CRSV" 1;
+  }
+  100% {
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 1;
+  }
+}
+/* "i am drunk" animation */
+
+.im-drunk {
+  animation: shake 2s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+@keyframes shake {
+ 0% {
+    transform: rotate(2deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 1;
+  }
+  
+  10% {
+    transform: rotate(-2deg);
+    font-variation-settings: "wght" 400, "slnt" 0, "CASL" 1, "CRSV" 0;
+  }
+
+  15% {
+    transform: rotate(3deg);
+    font-variation-settings: "wght" 900, "slnt" -10, "CASL" 1, "CRSV" 0;
+  }
+
+  32% {
+    transform: rotate(-3deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 0, "CRSV" 1;
+  }
+
+  38% {
+    transform: rotate(4deg);
+    font-variation-settings: "wght" 700, "slnt" 0, "CASL" 1, "CRSV" 0;
+  }
+
+  50% {
+    transform: rotate(-4deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 0, "CRSV" 0;
+  }
+
+  60% {
+    transform: rotate(5deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 0;
+  }
+
+  70% {
+    transform: rotate(-5deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 1;
+  }
+
+  80% {
+    transform: rotate(6deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 0;
+  }
+
+  90% {
+    transform: rotate(-6deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 1;
+  }
+
+  100% {
+    transform: rotate(0deg);
+    font-variation-settings: "wght" 300, "slnt" 0, "CASL" 1, "CRSV" 0;
+  }
+
 }
